--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -59,6 +59,9 @@
       </div>
     </div>
 
+      <%= f.file_field :user_image %>
+
+
     <div class="form-group row">
       <%= f.label "電話番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
       <div class="col-md-3">
