--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -55,13 +55,15 @@
               <%= sauna.bookmarks.count %>件
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <% if sauna.bookmark_by?(current_user) %>
-                    <%= link_to sauna_bookmarks_path(sauna), method: :delete do %>
-                      <button type="button" class="btn btn-sm btn-warning">保存済み</button>
-                    <% end %>
-                  <% else %>
-                    <%= link_to sauna_bookmarks_path(sauna), method: :post do %>
-                      <button type="button" class="btn btn-sm btn-outline-warning"> 保存</button>
+                  <% if user_signed_in? %>
+                    <% if sauna.bookmark_by?(current_user) %>
+                      <%= link_to sauna_bookmarks_path(sauna), method: :delete do %>
+                        <button type="button" class="btn btn-sm btn-warning">保存済み</button>
+                      <% end %>
+                    <% else %>
+                      <%= link_to sauna_bookmarks_path(sauna), method: :post do %>
+                        <button type="button" class="btn btn-sm btn-outline-warning"> 保存</button>
+                      <% end %>
                     <% end %>
                   <% end %>
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
