--- a/app/views/admin/saunas/show.html.erb
+++ b/app/views/admin/saunas/show.html.erb
@@ -5,71 +5,252 @@
   </p>
 <% end %>
 
+
 <div class="container">
-  <div class="row">
-    <h4><%= @sauna.name %></h4>
-  </div>
-  <div class="row">
-    <div class= "col-md-12">
-      <%= image_tag @sauna.sauna_images[0], size: '500x300' %>
-      <% @sauna.sauna_images.each do |image| %>
-        <%= image_tag image, size: '100x100' %>
-      <% end %>
+  <div class="row my-3">
+    <div class ="col-8">
+      <div class = "row">
+        <h3><strong><%= @sauna.name %></strong></h3>
+        <div class ="col-12"></div>
+        <div class ="col-md-12">
+          <p class ="my-0"><%= @sauna.address1 %><%= @sauna.address2 %></p>
+        </div>
+        <div class ="col-md-auto">
+          <div id="average-review-rating"></div>
+          <script>
+            var elem = document.getElementById('average-review-rating');
+            var opt = {
+              starOn: "<%= asset_path('star-on.png') %>",
+              starOff: "<%= asset_path('star-off.png') %>",
+              starHalf: "<%= asset_path('star-half.png') %>",
+              half: true,
+              readOnly: true,
+              score: <%= @sauna.reviews.average(:rate) || 0 %>
+            };
+            raty(elem,opt);
+          </script>
+        </div>
+        <div class ="col-md-auto">
+          <%= @sauna.reviews.average(:rate) %>
+        </div>
+        <div class ="col-md-auto">
+          <%= @reviews.count %>件
+        </div>
+        <div class ="col-md-auto">
+          <%= @bookmarks.count %>件
+        </div>
+      </div>
     </div>
-    <div class="col-md-5 align-self-center">
-      <table class="table table-borderless">
+    <div class ="col-4 d-flex align-items-center justify-content-center">
+      <div class = "row d-flex justify-content-center">
+        <div class ="col-auto">
+          <%= link_to "編集", edit_admin_sauna_path(@sauna), class: "btn btn btn-success"  %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class = "col-md-6">
+      <div class = "row">
+        <div class = "col-md-12 d-flex justify-content-center">
+          <% if @sauna.sauna_images.attached? %>
+            <%= image_tag @sauna.sauna_images[0], size: '300x250' ,class: "mx-5 my-3"  %>
+          <% else %>
+            <%= image_tag asset_path("no_image.jpg"), size: '300x250' ,class: "mx-5 my-3"  %>
+          <% end %>
+        </div>
+      </div>
+      <div class = "row">
+        <div class = "col-md-12 d-flex justify-content-center">
+          <% if @sauna.sauna_images.attached? %>
+            <% @sauna.sauna_images.each do |image| %>
+              <%= image_tag image, size: '100x80' ,class: "mx-1 my-2" %>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <div class = "col-md-6">
+      <table class="table my-3" >
         <tbody>
-          <tr>
-            <td scope="row", style="width:40%">
-              サウナ名
-            </td>
+          <tr class=>
+            <th>
+              施設名
+            </th>
             <td>
               <%= @sauna.name %>
             </td>
           </tr>
+
           <tr>
-            <td scope="row", style="width:40%">
-              住所
-            </td>
+            <th>
+              営業時間
+            </th>
             <td>
-              <%= @sauna.address_display %>
+              <%= @sauna.business_hours %>
             </td>
           </tr>
 
           <tr>
+            <th>
+              入湯料
+            </th>
             <td>
-              詳細
-            </td>
-            <td>
-              <%= @sauna.introduction %>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              入場料
-            </td>
-            <td>
-              <%= @sauna.add_tax_price %>(<%= @sauna.price.to_s(:delimited) %>)円
+              <%= @sauna.add_tax_price %>(税込)
             </td>
           </tr>
-          <tr>
-            <td>
 
-            </td>
+
+          <tr>
+            <th>
+
+            </th>
             <% if @sauna.sales_state == true %>
-              <th scope="row", class="text-success">閉業</th>
+              <td class="text-muted">閉業</td>
             <% else %>
-              <th scope="row", class="text-muted">営業中</th>
+              <td class="text-success">営業中</td>
             <% end %>
           </tr>
-          <%= @sauna.latitude %>
+
+
+          <tr>
+            <th>
+              住所
+            </th>
+            <td>
+              <%= @sauna.address_display %>
+                <script type="text/javascript">
+                function initMap() {
+              // latitude,longitudeから位置を特定
+                  var test ={lat: <%= @sauna.latitude %>, lng: <%= @sauna.longitude %>};
+                  var map = new google.maps.Map(document.getElementById('map'), {
+                            zoom: 15,
+                            center: test
+                            });
+                  var transitLayer = new google.maps.TransitLayer();
+                  transitLayer.setMap(map);
+
+                  var contentString = '住所：<%= @sauna.full_address %>';
+                  var infowindow = new google.maps.InfoWindow({
+                    content: contentString
+                  });
+
+              // Map上の指定した位置にピンを挿して表示する
+                  var marker = new google.maps.Marker({
+                                position:test,
+                                map: map,
+                                title: contentString
+                               });
+
+                   marker.addListener('click', function() {
+                     infowindow.open(map, marker);
+                   });
+                }
+              </script>
+
+              <!--以下の記述の中にあるYOUR_API_KEYには取得したご自身のAPIキーを記述してください-->
+              <script async defer
+                            src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap">
+              </script>
+              <!--表示するmapのcssです。ご自身でカスタマイズしてください。高さが設定されていないと表示されないことがあります。-->
+              <style type="text/css">
+                #map { height: 200px;
+                       width: 100%;}
+              </style>
+
+              <!--mapの表示-->
+              <div id="map"></div>
+
+            </td>
+          </tr>
+
         </tbody>
       </table>
     </div>
   </div>
-  <div class="row  justify-content-center">
-    <div class="col-auto ">
-      <%= link_to "編集", edit_admin_sauna_path(@sauna), class: "btn btn btn-success px-5 py-2"  %>
+
+  <div class ="mt-3">
+
+  </div>
+
+  <div class = "row mb-3">
+    <div class ="col-md-12">
+      <div class = "row">
+        <h5 class = "border-bottom border-5">
+          施設情報
+        </h5>
+        <p class = "col-md-12">
+          <%= @sauna.introduction %>
+        </p>
+      </div>
     </div>
   </div>
+
+
+  <div class="row mb-3">
+    <div class="col-md-8 pr-5">
+      <div class="row mb-1">
+        <div class="col-auto mr-auto pl-0">
+          <h5 class ="border-bottom border-5">レビュー(<%= @reviews.count %>)</h5>
+        </div>
+      </div>
+      <div class="row mb-1">
+        <div class="col">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col", style="width: 25%"></th>
+                <th scope="col", style="width: 40%">タイトル</th>
+                <th scope="col", style="width: 10%">評価</th>
+                <th scope="col", style="width: 20%">ユーザー</th>
+              </tr>
+            </thead>
+            <% @reviews.each do |review| %>
+            <tbody>
+              <tr>
+                <td><%= review.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
+                <td><%= review.review_title.truncate(10) %></td>
+                <td><%= review.rate %></td>
+                <td><%= review.user.full_name %></td>
+              </tr>
+            </tbody>
+            <% end %>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class ="row mb-1">
+        <div class="col-auto mr-auto pl-0">
+          <h5 class ="border-bottom border-5">保存ユーザー(<%= @bookmarks.count %>)</h5>
+        </div>
+      </div>
+      <div class ="row mb-1">
+        <div class="col">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col", style="width: 60%"></th>
+                <th scope="col", style="width: 5%">ID</th>
+                <th scope="col", style="width: 35%">ユーザー名</th>
+              </tr>
+            </thead>
+            <% @bookmarks.each do |bookmark| %>
+            <tbody>
+              <tr>
+                <td scope="row"><%= bookmark.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
+                <td><%= bookmark.user_id %></td>
+                <td><%= bookmark.user.full_name %></td>
+              </tr>
+            </tbody>
+            <% end %>
+          </table>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
 </div>
