--- a/app/views/public/saunas/index.html.erb
+++ b/app/views/public/saunas/index.html.erb
@@ -70,6 +70,7 @@
         <div class ="col-md-2">
           <div class = "row d-flex justify-content-center">
             <div class ="col-auto">
+            <% if user_signed_in? %>
               <% if sauna.bookmark_by?(current_user) %>
                 <%= link_to sauna_bookmarks_path(sauna), method: :delete do %>
                   <button type="button" class="btn btn btn-warning">保存済み</button>
@@ -79,6 +80,7 @@
                   <button type="button" class="btn btn btn-outline-warning"> 保存</button>
                 <% end %>
               <% end %>
+            <% end %>
             </div>
           </div>
         </div>
