--- a/app/views/public/saunas/show.html.erb
+++ b/app/views/public/saunas/show.html.erb
@@ -40,6 +40,7 @@
     <div class ="col-4 d-flex align-items-center justify-content-center">
       <div class = "row d-flex justify-content-center">
         <div class ="col-auto">
+        <% if user_signed_in? %>
           <% if @sauna.bookmark_by?(current_user) %>
             <%= link_to sauna_bookmarks_path(@sauna), method: :delete do %>
               <button type="button" class="btn btn btn-warning">保存済み</button>
@@ -49,7 +50,9 @@
               <button type="button" class="btn btn btn-outline-warning"> 保存</button>
             <% end %>
           <% end %>
+        <% end %>
           <%= link_to "さ活を登録", new_sauna_review_path(@sauna), class: "btn btn btn-success"  %>
+
         </div>
       </div>
     </div>
@@ -178,9 +181,7 @@
   </div>
 
 
-  <div class ="mt-3">
 
-  </div>
 
   <div class = "row mb-3">
     <div class ="col-md-12">
@@ -215,15 +216,16 @@
         </div>
         <div class="card">
           <div class="card-header">
+            <%= link_to user_path(review.user_id) do %>
             <div class="row">
               <div class="col-auto d-flex align-items-center">
                 <%= image_tag review.user.get_user_image(40,40) %>
               </div>
               <div class="col d-flex align-items-center">
                 <h6 class="mb-0"><%= review.user.full_name %><small class="text-muted pl-2"><%= review.visit_date.strftime('%Y/%m') %>訪問</small></h6>
-
               </div>
             </div>
+            <% end %>
           </div>
           <div class="card-body">
             <h5 class="card-title">
@@ -251,6 +253,7 @@
               </script>
               <%= review.rate %>
             </div>
+            <% if user_signed_in? %>
               <% if review.favorited_by?(current_user) %>
                 <p>
                   <%= link_to sauna_review_favorites_path(@sauna,review), method: :delete do %>
@@ -264,9 +267,11 @@
                   <% end %>
                 </p>
               <% end %>
+            <% end %>
           </div>
         </div>
       </div>
     <% end %>
 
+</div>
 </div>
