[add]レイアウトの調整

--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,30 +1,51 @@
-<h2>新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "admin/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row my-3">
+    <h4>新規管理者登録</h4>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "admin/shared/error_messages", resource: resource %>
+
+  <div class="form-group row">
+    <%= f.label :email, "メールアドレス", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-5">
+      <%= f.email_field :email, autocomplete: "email",  class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group row ">
+     <% if @minimum_password_length %>
+      <%= f.label :password, "パスワード(#{@minimum_password_length} 文字以上)", class: "col-md-3 offset-md-1 col-form-label" %>
+     <% else %>
+      <%= f.label :password, "パスワード", class: "col-md-3 offset-md-1 col-form-label" %>
+     <% end %>
+    <div class="col-md-5">
+      <%= f.password_field :password, autocomplete: "new-password",  class: "form-control" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form-group row">
+    <%= f.label :password_confirmation, "確認用", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-5">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: "form-control" %>
+    </div>
   </div>
-<% end %>
 
-<%= render "admin/shared/links" %>
+  <div class="form-group row  justify-content-center">
+    <div class="col-auto ">
+      <%= f.submit "新規登録", class: "btn btn btn-success px-5 py-2" %>
+    </div>
+  </div>
+  <% end %>
 
+  <div class="row">
+    <h4 class="p-3">既に登録済みの方</h4>
+  </div>
+  <div class="row">
+    <div class="col-md-6 offset-md-2 ">
+      <%= link_to "こちら", new_user_session_path, class: "p-2" %>
+      からログインしてください
+    </div>
+  </div>
+</div>
