--- a/app/views/admin/reviews/show.html.erb
+++ b/app/views/admin/reviews/show.html.erb
@@ -10,7 +10,7 @@
 
 
   <div class="row">
-    <%= link_to  sauna_path(@review.sauna) do %>
+    <%= link_to  admin_sauna_path(@review.sauna) do %>
       <h4 class="m-3"><%= @review.sauna.name %></h4>
     <% end %>
   </div>
@@ -20,7 +20,7 @@
 
   <div class="card">
     <div class="card-header">
-      <%= link_to user_path(@review.user_id) do %>
+      <%= link_to admin_user_path(@review.user_id) do %>
       <div class="row">
         <div class="col-auto d-flex align-items-center">
           <%= image_tag @review.user.get_user_image(40,40) %>
@@ -61,26 +61,9 @@
         <%= @review.rate %>
       </div>
 
-      <div class="btn-group">
 
-      <% if user_signed_in? %>
-        <% if @review.favorited_by?(current_user) %>
-          <%= link_to sauna_review_favorites_path(@review.sauna_id,@review), method: :delete do %>
-            <button type="button" class="btn btn-sm btn-secondary">♥<%= @review.favorites.count %> いいね</button>
-          <% end %>
-        <% else %>
-          <%= link_to sauna_review_favorites_path(@review.sauna_id,@review), method: :post do %>
-            <button type="button" class="btn btn-sm btn-outline-secondary">♡<%= @review.favorites.count %> いいね</button>
-          <% end %>
-        <% end %>
-        <%= link_to "コメント", new_sauna_review_comment_path(@review.sauna,@review), class: "btn btn-sm btn-outline-secondary"  %>
-      <% end %>
+      <%= link_to "削除", admin_sauna_review_path(@review.sauna,@review), method: :delete, class: "btn btn-sm btn-outline-secondary"  %>
 
-      <% if @review.user == current_user %>
-        <%= link_to "編集する", edit_sauna_review_path(@review.sauna.id,@review), class: "btn btn-sm btn-outline-secondary"  %>
-        <%= link_to "削除する", sauna_review_path(@review), method: :delete, class: "btn btn-sm btn-sm btn-outline-secondary"  %>
-      <% end %>
-      </div>
 
 
     </div>
@@ -97,7 +80,7 @@
       <tr>
         <th scope="col">
           <%= image_tag comment.user.get_user_image(40,40) %>
-          <%= link_to user_path(comment.user_id) do  %>
+          <%= link_to admin_user_path(comment.user_id) do  %>
             <%= comment.user.full_name %>
           <% end %>
         </th>
@@ -115,8 +98,7 @@
         <td scope="col"><%= comment.comment_detail %></td>
         <td scope="col">
     　     <div class="btn-group">
-    　      <%= link_to "編集する", edit_sauna_review_comment_path(comment.review.sauna_id,comment.review_id,comment), class: "btn btn-sm btn-outline-secondary"  %>
-            <%= link_to "削除する", sauna_review_comment_path(comment.review.sauna_id,comment.review_id,comment), method: :delete, class: "btn btn-sm btn-sm btn-outline-secondary"  %>
+            <%= link_to "削除する", admin_sauna_review_comment_path(comment.review.sauna_id,comment.review_id,comment), method: :delete, class: "btn btn-sm btn-sm btn-outline-secondary"  %>
           </div>
 
         </td>
