--- a/app/views/admin/saunas/edit.html.erb
+++ b/app/views/admin/saunas/edit.html.erb
@@ -14,12 +14,6 @@
   <div class="mb-10">
   <%= form_with model: @sauna, url: admin_sauna_path do |f| %>
 
-    <div class="form-group row">
-      <%= f.label "商品画像", class: "col-md-2 offset-md-2 col-form-label" %>
-      <div class="col-md-6">
-        <%= f.file_field :sauna_images, placeholder:"ファイルを選択", multiple: true  %>
-      </div>
-    </div>
 
     <div class="form-group row">
       <%= f.label "商品名", class: "col-md-2 offset-md-2 col-form-label" %>
@@ -58,14 +52,21 @@
 
 
     <div class="form-group row">
-      <%= f.label "商品説明", class: "col-md-2 offset-md-2 col-form-label" %>
+      <%= f.label "施設説明", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-5">
         <%= f.text_area :introduction, placeholder:"ここに説明文を記述します",  class: "form-control" %>
       </div>
     </div>
+    <div class="form-group row">
+      <%= f.label "営業時間", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5">
+        <%= f.text_field :business_hours, placeholder:"10:00~18:00",  class: "form-control" %>
+      </div>
+    </div>
+
 
     <div class="form-group row">
-      <%= f.label "販売価格", class: "col-md-2 offset-md-2 col-form-label" %>
+      <%= f.label "入湯料(税込)", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-5 pr-0">
         <%= f.text_field :price, placeholder:"1000",  class: "form-control" %>
       </div>
@@ -106,10 +107,15 @@
         <%= f.label :"公開" %>
       </div>
     </div>
-
-
+    <div class="form-group row">
+      <%= f.label "追加サウナ画像", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-6">
+        <%= f.file_field :sauna_images, placeholder:"ファイルを選択", multiple: true  %>
+      </div>
+    </div>
+    <div class="form-group row">
     <% if @sauna.sauna_images.attached? %>
-      <p>選択済みの画像（削除する画像にチェックをつけてください）</p>
+      <p>登録済みの画像（削除する画像にチェックをつけてください）</p>
       <div style="display: flex; flex-wrap: wrap; width: 750px;">
       <% @sauna.sauna_images.each do |image| %>
         <div style="display: flex; margin:5px 5px 5px 0;">
@@ -121,6 +127,7 @@
       <% end %>
       </div>
     <% end %>
+    </div>
 
     <div class="row  justify-content-center">
       <div class="col-auto ">
