--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
-  <div class="row">
+  <div class="row my-3">
     <h4>新規会員登録</h4>
   </div>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "admin/shared/error_messages", resource: resource %>
+    <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="form-group row">
-    <%= f.label "名前", class: "col-md-3 offset-md-1 col-form-label" %>
+    <%= f.label :full_name, "名前", class: "col-md-3 offset-md-1 col-form-label" %>
     <div class="col-md-3">
       <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
     </div>
@@ -17,7 +17,7 @@
   </div>
 
   <div class="form-group row">
-    <%= f.label "フリガナ", class: "col-md-3 offset-md-1 col-form-label" %>
+    <%= f.label :full_name_kana, "フリガナ", class: "col-md-3 offset-md-1 col-form-label" %>
     <div class="col-md-3">
       <%= f.text_field :last_name_kana,  class: "form-control" %>
     </div>
@@ -27,43 +27,45 @@
   </div>
 
   <div class="form-group row">
-    <%= f.label "メールアドレス", class: "col-md-3 offset-md-1 col-form-label" %>
-    <div class="col-md-3">
+    <%= f.label :email, "メールアドレス", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-6">
       <%= f.email_field :email, autocomplete: "email",  class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= f.label "郵便番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
+    <%= f.label :postal_code, "郵便番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
     <div class="col-md-3">
       <%= f.text_field :postal_code,  class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= f.label "住所", class: "col-md-3 offset-md-1 col-form-label" %>
+    <%= f.label  :address,  "住所", class: "col-md-3 offset-md-1 col-form-label" %>
     <div class="col-md-6">
       <%= f.text_field :address,  class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= f.label "電話番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
+    <%= f.label  :telephone_number, "電話番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
     <div class="col-md-3">
       <%= f.text_field :telephone_number,  class: "form-control" %><br>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= f.label "画像", class: "col-md-3 offset-md-1 col-form-label" %>
-    <%= f.file_field :user_image %>
+    <%= f.label :user_image, "画像", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-3">
+      <%= f.file_field :user_image %>
+    </div>
   </div>
 
   <div class="form-group row ">
      <% if @minimum_password_length %>
-      <%= f.label "パスワード(#{@minimum_password_length} 文字以上)", class: "col-md-3 offset-md-1 col-form-label" %>
+      <%= f.label :password, "パスワード(#{@minimum_password_length} 文字以上)", class: "col-md-3 offset-md-1 col-form-label" %>
      <% else %>
-      <%= f.label "パスワード", class: "col-md-3 offset-md-1 col-form-label" %>
+      <%= f.label :password, "パスワード", class: "col-md-3 offset-md-1 col-form-label" %>
      <% end %>
     <div class="col-md-3">
       <%= f.password_field :password, autocomplete: "new-password",  class: "form-control" %>
@@ -71,7 +73,7 @@
   </div>
 
   <div class="form-group row">
-    <%= f.label "確認用", class: "col-md-3 offset-md-1 col-form-label" %>
+    <%= f.label :password_confirmation, "確認用", class: "col-md-3 offset-md-1 col-form-label" %>
     <div class="col-md-3">
       <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: "form-control" %>
     </div>
@@ -95,33 +97,3 @@
   </div>
 </div>
 
-
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
