--- a/app/views/public/saunas/show.html.erb
+++ b/app/views/public/saunas/show.html.erb
@@ -38,23 +38,28 @@
       </div>
     </div>
     <div class ="col-4 d-flex align-items-center justify-content-center">
-      <div class = "row d-flex justify-content-center">
-        <div class ="col-auto">
+      <!--<div class = "row d-flex justify-content-center">-->
+        <div class="btn-group">
         <% if user_signed_in? %>
           <% if @sauna.bookmark_by?(current_user) %>
             <%= link_to sauna_bookmarks_path(@sauna), method: :delete do %>
-              <button type="button" class="btn btn btn-warning">保存済み</button>
+              <button type="button" class="btn btn btn-warning" ><i class="fas fa-bookmark" ></i>保存済み</button>
             <% end %>
           <% else %>
             <%= link_to sauna_bookmarks_path(@sauna), method: :post do %>
-              <button type="button" class="btn btn btn-outline-warning"> 保存</button>
+              <button type="button" class="btn btn btn-outline-warning"><i class="far fa-bookmark"></i>保存</button>
             <% end %>
           <% end %>
-        <% end %>
-          <%= link_to "さ活を登録", new_sauna_review_path(@sauna), class: "btn btn btn-success"  %>
 
+          <%= link_to new_sauna_review_path(@sauna) do %>
+            <button type="button" class="btn btn btn-outline-warning">
+              <!--<i class="far fa-plus-circle"></i>-->
+              サ活報告
+            </button>
+          <% end %>
+        <% end %>
         </div>
-      </div>
+      <!--</div>-->
     </div>
   </div>
 
@@ -67,7 +72,7 @@
           <% if @sauna.sauna_images.attached? %>
             <%= image_tag @sauna.sauna_images[0], size: '300x250' ,class: "mx-5 my-3"  %>
           <% else %>
-            <%= image_tag asset_path("no_image.jpg"), size: '300x250' ,class: "mx-5 my-3"  %>
+            <%= image_tag asset_path("no_image2.jpg"), size: '300x250' ,class: "mx-5 my-3"  %>
           <% end %>
         </div>
       </div>
@@ -204,8 +209,15 @@
           <h5 class ="border-bottom border-5">みんなのサ活(全<%= @reviews.count %>件)</h5>
         </div>
         <div class="col-auto">
-          <%= link_to "さ活を登録", new_sauna_review_path(@sauna), class: "col-auto btn btn-sm btn-success"  %>
-        </div>
+          <% if user_signed_in? %>
+            <%= link_to new_sauna_review_path(@sauna) do %>
+              <button type="button" class="btn btn btn-outline-warning">
+                <!--<i class="far fa-plus-circle"></i>-->
+                サ活報告
+              </button>
+            <% end %>
+          <% end %>
+          </div>
       </div>
     </div>
 
@@ -222,21 +234,28 @@
                 <%= image_tag review.user.get_user_image(40,40) %>
               </div>
               <div class="col d-flex align-items-center">
-                <h6 class="mb-0"><%= review.user.full_name %><small class="text-muted pl-2"><%= review.visit_date.strftime('%Y/%m') %>訪問</small></h6>
+                <h6 class="mb-0"><%= review.user.full_name %></h6>
               </div>
             </div>
             <% end %>
           </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <small class="text-muted pl-2"><%= review.visit_date.strftime('%Y/%m') %>訪問</small>
+            </li>
+          </ul>
           <div class="card-body">
-            <h5 class="card-title">
+            <h5 class="card-title border-bottom">
               <%= link_to  sauna_review_path(@sauna,review) do %>
                 <%= review.review_title %>
               <% end %>
             </h5>
-      　     <p class="card-text">
-              <%= review.review_detail %>
+            <p class="card-text">
+            <%= truncate review.review_detail, length: 10 do %>
+              <%= link_to "続きを読む", sauna_review_path(@sauna,review) %>
+            <% end %>
        　    </p>
-            <div>
+            <div class="d-flex">
               <span id="star-rate-<%= review.id %>"></span>
               <script>
                 var elem = document.getElementById('star-rate-<%= review.id %>');
@@ -253,25 +272,28 @@
               </script>
               <%= review.rate %>
             </div>
+
             <% if user_signed_in? %>
               <% if review.favorited_by?(current_user) %>
-                <p>
-                  <%= link_to sauna_review_favorites_path(@sauna,review), method: :delete do %>
-                    ♥<%= review.favorites.count %> いいね
-                  <% end %>
-                </p>
-                <% else %>
-                <p>
-                  <%= link_to sauna_review_favorites_path(@sauna,review), method: :post do %>
-                    ♡<%= review.favorites.count %> いいね
-                  <% end %>
-                </p>
+                <%= link_to sauna_review_favorites_path(@sauna,review), method: :delete do %>
+                  <button type="button" class="btn btn-sm btn-secondary ms-auto">♥<%= review.favorites.count %> いいね</button>
+                <% end %>
+              <% else %>
+                <%= link_to sauna_review_favorites_path(@sauna,review), method: :post do %>
+                  <button type="button" class="btn btn-sm btn-outline-secondary ms-auto">♡<%= review.favorites.count %> いいね</button>
+                <% end %>
               <% end %>
             <% end %>
+
+
           </div>
         </div>
       </div>
     <% end %>
+    <div class="d-flex justify-content-center">
+      <%= paginate @reviews %>
+    </div>
+
 
 </div>
 </div>
