--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -15,57 +15,58 @@
   <%= form_with model: @user, url: user_path do |f| %>
 
 
-
     <div class="form-group row">
-      <%= f.label "名前", class: "col-md-3 offset-md-1 col-form-label" %>
+      <%= f.label :full_name, "名前", class: "col-md-3 offset-md-1 col-form-label" %>
       <div class="col-md-3">
         <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
       </div>
       <div class="col-md-3">
         <%= f.text_field :first_name,  class: "form-control" %>
       </div>
-
     </div>
 
     <div class="form-group row">
-      <%= f.label "フリガナ", class: "col-md-3 offset-md-1 col-form-label" %>
+      <%= f.label :full_name_kana, "フリガナ", class: "col-md-3 offset-md-1 col-form-label" %>
       <div class="col-md-3">
         <%= f.text_field :last_name_kana,  class: "form-control" %>
       </div>
       <div class="col-md-3">
         <%= f.text_field :first_name_kana,  class: "form-control" %>
       </div>
-
     </div>
 
     <div class="form-group row">
-      <%= f.label "メールアドレス", class: "col-md-3 offset-md-1 col-form-label" %>
-      <div class="col-md-3">
+      <%= f.label :email, "メールアドレス", class: "col-md-3 offset-md-1 col-form-label" %>
+      <div class="col-md-6">
         <%= f.email_field :email, autocomplete: "email",  class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
-      <%= f.label "郵便番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
+      <%= f.label :postal_code, "郵便番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
       <div class="col-md-3">
-        <%= f.number_field :postal_code,  class: "form-control" %>
+        <%= f.text_field :postal_code,  class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
-      <%= f.label "住所", class: "col-md-3 offset-md-1 col-form-label" %>
+      <%= f.label  :address,  "住所", class: "col-md-3 offset-md-1 col-form-label" %>
       <div class="col-md-6">
         <%= f.text_field :address,  class: "form-control" %>
       </div>
     </div>
 
-      <%= f.file_field :user_image %>
-
+    <div class="form-group row">
+      <%= f.label  :telephone_number, "電話番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
+      <div class="col-md-3">
+        <%= f.text_field :telephone_number,  class: "form-control" %><br>
+      </div>
+    </div>
 
     <div class="form-group row">
-      <%= f.label "電話番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
+      <%= f.label :user_image, "画像", class: "col-md-3 offset-md-1 col-form-label" %>
       <div class="col-md-3">
-        <%= f.number_field :telephone_number,  class: "form-control" %><br>
+        <%= f.file_field :user_image %>
       </div>
     </div>
 
