[add]フッター位置調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body class="d-flex flex-column vh-100">
-    <header class="shadow-sm">
+    <header class="shadow-sm sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="/">sauna fan</a>
@@ -91,7 +91,7 @@
     <main>
       <%= yield %>
     </main>
-    <footer class="bg-dark text-white pt-5 pb-4">
+    <footer class="fixed-bottom bg-dark text-white pt-5 pb-4">
       <div class="container">
         <div class="row no-gutters">
           <div class="col-md-4">
@@ -111,7 +111,6 @@
                 <% end %>
               </li>
             </ul>
-
           </div>
         </div>
         <div class="d-flex justify-content-center">
