--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,114 +11,117 @@
   </head>
 
   <body class="d-flex flex-column vh-100">
-    <header class="shadow-sm sticky-top">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="wrapper">
+      <header class="shadow-sm sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container">
+            <a class="navbar-brand" href="/">sauna fan</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to  user_path(current_user.id), class: 'nav-link text-dark' do %>
+                  マイページ
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to saunas_path, class: 'nav-link text-dark' do %>
+                  サウナ一覧
+                  <% end %>
+                </li>
+
+                <li class="nav-item">
+                  <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-dark' do %>
+                  ログアウト
+                  <% end %>
+                </li>
+              <% elsif admin_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to admin_saunas_path, class: 'nav-link text-dark' do %>
+                  サウナ
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to admin_genres_path, class: 'nav-link text-dark' do %>
+                  ジャンル
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to admin_users_path, class: 'nav-link text-dark' do %>
+                  ユーザー
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to admin_reviews_path, class: 'nav-link text-dark' do %>
+                  レビュー
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' do %>
+                  ログアウト
+                  <% end %>
+                </li>
+
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to saunas_path, class: 'nav-link text-dark' do %>
+                  サウナ一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_user_registration_path, class: 'nav-link text-dark' do %>
+                  新規登録
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_user_session_path, class: 'nav-link text-dark' do %>
+                  ログイン
+                  <% end %>
+                </li>
+              <% end %>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+      <main >
+        <%= yield %>
+      </main>
+      <div class="push"></div>
+      <footer class="fixed-bottom bg-dark text-white pt-3">
         <div class="container">
-          <a class="navbar-brand" href="/">sauna fan</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-            <% if user_signed_in? %>
-              <li class="nav-item">
-                <%= link_to  user_path(current_user.id), class: 'nav-link text-dark' do %>
-                マイページ
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to saunas_path, class: 'nav-link text-dark' do %>
-                サウナ一覧
-                <% end %>
-              </li>
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <p>サ活を極めよう</p>
+            </div>
+            <div class="col-md-8">
 
-              <li class="nav-item">
-                <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-dark' do %>
-                ログアウト
-                <% end %>
-              </li>
-            <% elsif admin_signed_in? %>
-              <li class="nav-item">
-                <%= link_to admin_saunas_path, class: 'nav-link text-dark' do %>
-                サウナ
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to admin_genres_path, class: 'nav-link text-dark' do %>
-                ジャンル
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to admin_users_path, class: 'nav-link text-dark' do %>
-                ユーザー
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to admin_reviews_path, class: 'nav-link text-dark' do %>
-                レビュー
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' do %>
-                ログアウト
-                <% end %>
-              </li>
-
-            <% else %>
-              <li class="nav-item">
-                <%= link_to saunas_path, class: 'nav-link text-dark' do %>
-                サウナ一覧
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to new_user_registration_path, class: 'nav-link text-dark' do %>
-                新規登録
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to new_user_session_path, class: 'nav-link text-dark' do %>
-                ログイン
-                <% end %>
-              </li>
-            <% end %>
-            </ul>
+              <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <%= link_to root_path, class: 'nav-link text-white' do %>
+                  Top
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to saunas_path, class: 'nav-link text-white' do %>
+                  サウナ一覧
+                  <% end %>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="d-flex justify-content-center">
+            <p class="text-muted">Copyright ©</p>
           </div>
         </div>
-      </nav>
-    </header>
-
-    <main>
-      <%= yield %>
-    </main>
-    <footer class="fixed-bottom bg-dark text-white pt-5 pb-4">
-      <div class="container">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <p>サ活を極めよう</p>
-          </div>
-          <div class="col-md-8">
-
-            <ul class="nav justify-content-end">
-              <li class="nav-item">
-                <%= link_to root_path, class: 'nav-link text-white' do %>
-                Top
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to saunas_path, class: 'nav-link text-white' do %>
-                サウナ一覧
-                <% end %>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="d-flex justify-content-center">
-          <p class="text-muted">Copyright ©</p>
-        </div>
-      </div>
-    </footer>
+      </footer>
 
 
   </body>
+  </div>
 </html>
