[add]フッター位置調整

--- a/app/views/admin/_admin_search.html.erb
+++ b/app/views/admin/_admin_search.html.erb
@@ -1,5 +1,5 @@
 <div class ="row justify-content-center mt-4">
-  <%= form_with(scope: :search, url: saunas_path, method: :get, local: true) do |f| %>
+  <%= form_with(scope: :search, url: admin_saunas_path, method: :get, local: true) do |f| %>
   <div class ="col-auto py-2 rounded bg-secondary">
     <div class ="row">
       <div class="col-auto">
