--- a/app/views/admin/saunas/index.html.erb
+++ b/app/views/admin/saunas/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/admin_search', search_params: @search_params%>
+<%= render 'admin/admin_sauna_search', search_params: @search_params%>
 <div class="container">
   <div class="row justify-content-between">
     <div class="col-md-3 py-3">
