--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -13,7 +13,7 @@
 <div class="album">
   <% if admin_signed_in? %>
   <div class="my-4">
-    <%= render 'admin/admin_search', search_params: @search_params%>
+    <%= render 'admin/admin_sauna_search', search_params: @search_params%>
   </div>
   <% else %>
   <div class="my-4">
