[add]ログイン時表示の編集

--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -105,7 +105,7 @@
         <td scope="col">
           <small class="text-muted pl-2">
         　   <% if comment.created_at != comment.updated_at %>
-        　     <%= comment.updated_at_ymd %> <p>に編集済み</p>
+        　    <%= comment.updated_at_ymd %>に編集済み
         　   <% else %>
               <%= comment.created_at_ymd %>
         　   <% end %>
