--- a/app/views/admin/saunas/new.html.erb
+++ b/app/views/admin/saunas/new.html.erb
@@ -101,11 +101,11 @@
       <%= f.label "公開状況", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-2">
         <%= f.radio_button :is_active, true %>
-        <%= f.label :is_active_true, "非公開",value: true %>
+        <%= f.label :is_active, "非公開",value: true %>
       </div>
       <div class="col-md-2">
         <%= f.radio_button :is_active, false %>
-        <%= f.label :is_active_false,"公開", value: false %>
+        <%= f.label :is_active,"公開", value: false %>
       </div>
     </div>
     <div class="form-group row">
